# clipboard

Clippex/: generate-icons.mjs  package-lock.json  package.json
Clippex-sync/: index.html  package.json
Clippex-sync/server/: .env  clippex.db-shm  db.js  index.js
Clippex-sync/src/: icons.tsx  styles.css
Clippex-sync/src-tauri/: Cargo.toml
Clippex-sync/src-tauri/capabilities/: default.json
Clippex-sync/src-tauri/src/: clipboard.rs  commands.rs  database.rs  lib.rs  settings.rs  sync.rs
Clippex/server/: auth.js  clippex.db-wal  package-lock.json  package.json  routes.js
Clippex/src/: App.tsx  Settings.tsx  main.tsx  styles.css
Clippex/src-tauri/: Cargo.toml  tauri.conf.json
Clippex/src-tauri/icons/: icon.icns
Clippex/src-tauri/src/: clipboard.rs  commands.rs  lib.rs  models.rs  settings.rs  sync.rs
clipboard-manager/: package-lock.json  package.json
clipboard-manager/src/: App.tsx  styles.css
clipboard-manager/src-tauri/: Cargo.toml  tauri.conf.json
clipboard-manager/src-tauri/src/: clipboard.rs  commands.rs  database.rs  lib.rs  settings.rs
